.workspace-data/cache/repo-33e59f1f5d53b03b/crates/next-custom-transforms/tests/errors/server-actions/server-graph/28/input.js
'use cache:remote'

export async function foo() {
  return 'data'
}

export async function bar() {
  'use cache : default'
  return 'data'
}

export async function baz() {
  'use cache private'
  return 'data'
}

export async function qux() {
  'use cache '
  return 'data'
}

export async function quux() {
  'use cache: '
  return 'data'
}
